rework confidence scoring

--- a/templates/bruh.html
+++ b/templates/bruh.html
@@ -46,7 +46,7 @@
             </div>
             <div class="col-sm col-sm border testing">
                 <h5>Results</h3>
-                    <h4>Upcomming Recommendations</h2>
+                    <h4>Upcoming Recommendations</h2>
                         <ul class="list-group recommended_cards_list" style="max-height: 500px;overflow:scroll;">
 
                         </ul>
